:recycle: fix ipython notebooks to work with new parameters

--- a/notebooks/exploratory/0.17.0-bunop-isheep.ipynb
+++ b/notebooks/exploratory/0.17.0-bunop-isheep.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "ad4bb541-f97d-4b78-a69f-0b0131957a1f",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "f2bf3de2-7035-41ed-aaad-21fbcd2bc396",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "3cef817f-aa0f-4064-b4e9-d6861fb23694",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "3bc8a090-f893-4c77-bcc9-5b42c9f95af2",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "79e2f87e-9575-4c00-9e25-ace363748c94",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "e11f5c48-8740-4806-af39-3746e0bf31f9",
    "metadata": {},
    "outputs": [
@@ -208,36 +208,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "c6aac78f-dcd2-4146-9e4f-cbef280c38f8",
    "metadata": {},
    "outputs": [],
    "source": [
     "class CustomBinaryPlinkIO(BinaryPlinkIO):\n",
-    "    def process_pedfile(self, coding=\"top\"):\n",
+    "    def process_pedfile(self, src_coding=\"top\"):\n",
     "        for line in tqdm(self.read_pedfile(), total=len(self.plink_file.get_samples())):\n",
-    "            _ = self._process_genotypes(line, coding)\n",
-    "            \n",
+    "            _ = self._process_genotypes(line, src_coding=src_coding)\n",
+    "\n",
     "        return True\n",
-    "    \n",
+    "\n",
     "    def is_top(self):\n",
     "        try:\n",
-    "            return self.process_pedfile(coding='top')\n",
-    "        \n",
+    "            return self.process_pedfile(src_coding='top')\n",
+    "\n",
     "        except CodingException:\n",
     "            return False\n",
-    "    \n",
+    "\n",
     "    def is_forward(self):\n",
     "        try:\n",
-    "            return self.process_pedfile(coding='forward')\n",
-    "        \n",
+    "            return self.process_pedfile(src_coding='forward')\n",
+    "\n",
     "        except CodingException:\n",
     "            return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "0e18006b-2895-4d6d-a6de-2f0e56ee51f2",
    "metadata": {},
    "outputs": [],
@@ -258,14 +258,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "874464c2-61b4-4e0d-85a3-730bef07a019",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f371087b0c9443089b86d8fc1c0b7ec3",
+       "model_id": "2c4e33a9373f45d592fc82387f686e52",
        "version_major": 2,
        "version_minor": 0
       },
@@ -277,19 +277,12 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Error for SNP 2911: 'rs160561607': G/G <> T/C\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "False"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,14 +301,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "id": "50a6256b-bdb9-4cc3-988b-163d41773965",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e201b23786ef45c99f7d0a2e1a1b961b",
+       "model_id": "03690a28c31b4540bf095c6c40960ab5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -332,7 +325,7 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "e49c62f8-84c0-4816-a7e1-f3d8a6ab64be",
    "metadata": {},
    "outputs": [
@@ -381,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "id": "fc5031a1-8977-4f70-9974-2c76a0c01cfd",
    "metadata": {},
    "outputs": [
@@ -413,7 +406,7 @@
        " 'rs418396733': 2}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "id": "4c3ae85a-c033-48da-a3ff-df033750ef47",
    "metadata": {},
    "outputs": [
@@ -460,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "id": "90f82c06-cd90-4260-b260-d70f95c6b49b",
    "metadata": {},
    "outputs": [],
@@ -481,14 +474,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "id": "5db882e8-2e73-4ede-a50c-4e0d8869c320",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8cb76de9f3884881bcda101b8d8124a0",
+       "model_id": "2fa64be543a94c7d95a8c53425c4f449",
        "version_major": 2,
        "version_minor": 0
       },
@@ -500,19 +493,12 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Error for SNP 1855: 'rs160263922': A/A <> T/G\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "False"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,14 +517,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "id": "6d4b2398-5c36-440d-9b5a-3c571d037d84",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bddf944028474885a665c00103fb8e05",
+       "model_id": "f9e13a63feab4d35b1988c9bd654df9d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -555,7 +541,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
