--- a/notebooks/exploratory/0.17.1.bunop-isheep_WGS.ipynb
+++ b/notebooks/exploratory/0.17.1.bunop-isheep_WGS.ipynb
@@ -75,7 +75,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab07dd7a1d044cfea163e9ed1ecc5136",
+       "model_id": "a490b75a769e4a20a805f5f12d5eafaf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -92,11 +92,11 @@
     "\n",
     "for chrom in tqdm(chromosomes):\n",
     "    regions_filename = get_interim_dir() / f\"chr{chrom}_regions.tsv\"\n",
-    "    \n",
+    "\n",
     "    if regions_filename.exists():\n",
     "        # save some time, skip evaluation\n",
     "        continue\n",
-    "        \n",
+    "\n",
     "    condition = OAR4._asdict()\n",
     "    condition['chrom'] = chrom\n",
     "    variants = VariantSheep.objects.filter(\n",
@@ -106,22 +106,21 @@
     "        name=1,\n",
     "        rs_id=1\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    locations = set()\n",
-    "    \n",
+    "\n",
     "    for variant in variants:\n",
     "        location = (variant.locations[0].chrom, variant.locations[0].position)\n",
-    "        \n",
+    "\n",
     "        if location not in locations:\n",
     "            locations.add(location)\n",
-    "            \n",
+    "\n",
     "    locations = sorted(list(locations), key=lambda location: location[1])\n",
-    "    \n",
+    "\n",
     "    with open(regions_filename, \"w\") as handle:\n",
     "        writer = csv.writer(handle, delimiter=\"\\t\", lineterminator=\"\\n\")\n",
     "        for location in locations:\n",
-    "            writer.writerow(location)\n",
-    "            "
+    "            writer.writerow(location)\n"
    ]
   },
   {
@@ -165,51 +164,51 @@
    "outputs": [],
    "source": [
     "class CustomBinaryPlinkIO(BinaryPlinkIO):\n",
-    "    def process_pedfile(self, coding=\"top\"):\n",
+    "    def process_pedfile(self, src_coding=\"top\"):\n",
     "        for line in tqdm(self.read_pedfile(), total=len(self.plink_file.get_samples())):\n",
-    "            _ = self._process_genotypes(line, coding)\n",
-    "            \n",
+    "            _ = self._process_genotypes(line, src_coding)\n",
+    "\n",
     "        return True\n",
-    "    \n",
+    "\n",
     "    def is_top(self):\n",
     "        try:\n",
-    "            return self.process_pedfile(coding='top')\n",
-    "        \n",
+    "            return self.process_pedfile(src_coding='top')\n",
+    "\n",
     "        except CodingException:\n",
     "            return False\n",
-    "    \n",
+    "\n",
     "    def is_forward(self):\n",
     "        try:\n",
-    "            return self.process_pedfile(coding='forward')\n",
-    "        \n",
+    "            return self.process_pedfile(src_coding='forward')\n",
+    "\n",
     "        except CodingException:\n",
     "            return False\n",
-    "        \n",
+    "\n",
     "    def fetch_coordinates_by_positions(self, src_assembly: AssemblyConf, dst_assembly: AssemblyConf):\n",
     "        # reset meta informations\n",
     "        self.src_locations = list()\n",
     "        self.dst_locations = list()\n",
     "        self.filtered = set()\n",
     "        self.variants_name = list()\n",
-    "        \n",
+    "\n",
     "        for idx, record in enumerate(tqdm(self.mapdata, mininterval=2)):\n",
     "            location = src_assembly._asdict()\n",
     "            location[\"chrom\"] = record.chrom\n",
     "            location[\"position\"] = record.position\n",
-    "            \n",
+    "\n",
     "            # attempt to fix-up 27 chrom\n",
     "            if int(location[\"chrom\"]) == 27:\n",
     "                location[\"chrom\"] = \"X\"\n",
-    "            \n",
+    "\n",
     "            # construct the final query\n",
     "            query = [Q(locations__match=location) &\n",
     "                     Q(locations__match=dst_assembly._asdict())]\n",
-    "        \n",
+    "\n",
     "            try:\n",
     "                variant = self.VariantSpecies.objects(\n",
     "                    *query\n",
     "                ).get()\n",
-    "            \n",
+    "\n",
     "            except DoesNotExist as e:\n",
     "                logger.warning(\n",
     "                    f\"Couldn't find {record.chrom}:{record.position} in {src_assembly}\"\n",
@@ -219,7 +218,7 @@
     "\n",
     "                # don't check location for missing SNP\n",
     "                continue\n",
-    "                \n",
+    "\n",
     "            except MultipleObjectsReturned as e:\n",
     "                # tecnically, I could return the first item I found in my database\n",
     "                # skip, for the moment\n",
@@ -231,7 +230,7 @@
     "\n",
     "                # don't check location for missing SNP\n",
     "                continue\n",
-    "                \n",
+    "\n",
     "            # get the proper locations and track it\n",
     "            src_location = variant.get_location(**src_assembly._asdict())\n",
     "            self.src_locations.append(src_location)\n",
@@ -253,7 +252,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "409f23153f7a467d9ca0ae47a9efd665",
+       "model_id": "b7bc38bd60c048e882fff6055785c6c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -289,7 +288,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "936f3eacf3cd41378c804753705e1d99",
+       "model_id": "b0186de1fb8d4e8994ec994274eb0b12",
        "version_major": 2,
        "version_minor": 0
       },
@@ -299,13 +298,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Error for SNP 2: '.': T/T <> A/C\n"
-     ]
     },
     {
      "data": {
@@ -339,7 +331,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "021837a925294b1d904c5d73194c59ab",
+       "model_id": "5dc3e00463f045c9aa0e0427132bbb9a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -349,13 +341,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Error for SNP 59: '.': T/T <> A/G\n"
-     ]
     },
     {
      "data": {
@@ -410,7 +395,7 @@
     "        print(f\"SNP {idx}({genotype}):{name} is not in forward coordinates)\")\n",
     "    if not location.is_top(genotype):\n",
     "        print(f\"SNP {idx}({genotype}):{name} is not in top coordinates)\")\n",
-    "        \n",
+    "\n",
     "get_info_snp(59)"
    ]
   },
@@ -439,21 +424,21 @@
    "source": [
     "def drop_variants(plinkio):\n",
     "    counter = 0\n",
-    "    \n",
+    "\n",
     "    for idx, locus in enumerate(plinkio.plink_file.get_loci()):\n",
     "        location = plinkio.src_locations[idx]\n",
-    "        \n",
+    "\n",
     "        if not location:\n",
     "            # some SNPs have already been removed\n",
     "            continue\n",
-    "        \n",
+    "\n",
     "        genotype = locus.allele1, locus.allele2\n",
-    "        \n",
+    "\n",
     "        # remove the non-forward variants\n",
     "        if not location.is_forward(genotype):\n",
     "            # this SNPs should be removed\n",
     "            counter += 1\n",
-    "            \n",
+    "\n",
     "            # add SNP to filtered set\n",
     "            plinkio.filtered.add(idx)\n",
     "\n",
@@ -480,7 +465,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "04d057a386aa43338ac3667d6ede971b",
+       "model_id": "8fdc02f079f3438cbf643e0e2a0e7533",
        "version_major": 2,
        "version_minor": 0
       },
