--- a/notebooks/exploratory/0.18.0-spanish_sheeps.ipynb
+++ b/notebooks/exploratory/0.18.0-spanish_sheeps.ipynb
@@ -52,41 +52,41 @@
    "source": [
     "class CustomMixin():\n",
     "    n_of_individuals = None\n",
-    "    \n",
-    "    def process_pedfile(self, coding=\"top\"):\n",
+    "\n",
+    "    def process_pedfile(self, src_coding=\"top\"):\n",
     "        for line in tqdm(self.read_pedfile(), total=self.n_of_individuals):\n",
-    "            _ = self._process_genotypes(line, coding)\n",
-    "            \n",
+    "            _ = self._process_genotypes(line, src_coding)\n",
+    "\n",
     "        return True\n",
-    "    \n",
+    "\n",
     "    def is_top(self):\n",
     "        try:\n",
-    "            return self.process_pedfile(coding='top')\n",
-    "        \n",
+    "            return self.process_pedfile(src_coding='top')\n",
+    "\n",
     "        except CodingException:\n",
     "            return False\n",
-    "    \n",
+    "\n",
     "    def is_forward(self):\n",
     "        try:\n",
-    "            return self.process_pedfile(coding='forward')\n",
-    "        \n",
+    "            return self.process_pedfile(src_coding='forward')\n",
+    "\n",
     "        except CodingException:\n",
     "            return False\n",
-    "        \n",
+    "\n",
     "    def is_affymetrix(self):\n",
     "        try:\n",
-    "            return self.process_pedfile(coding='affymetrix')\n",
-    "        \n",
+    "            return self.process_pedfile(src_coding='affymetrix')\n",
+    "\n",
     "        except CodingException:\n",
     "            return False\n",
-    "        \n",
+    "\n",
     "class CustomTextPlinkIO(CustomMixin, TextPlinkIO):\n",
     "    pass\n",
     "\n",
     "\n",
     "class CustomAffyPlinkIO(CustomMixin, AffyPlinkIO):\n",
     "    \"\"\"This is not a cellfile, but a plink made by affymetrix\"\"\"\n",
-    "    \n",
+    "\n",
     "    def read_pedfile(self, *args, **kwargs):\n",
     "        \"\"\"Open pedfile for reading return iterator\"\"\"\n",
     "\n",
@@ -101,18 +101,18 @@
     "                line = re.split('[ \\t]+', record.strip())\n",
     "\n",
     "                yield line\n",
-    "                \n",
+    "\n",
     "    def update_pedfile(self, outputfile: str):\n",
     "        with open(outputfile, \"w\") as target:\n",
     "            writer = csv.writer(\n",
     "                target, delimiter=' ', lineterminator=\"\\n\")\n",
     "\n",
     "            processed = 0\n",
-    "            \n",
+    "\n",
     "            for line in self.read_pedfile():\n",
     "                # a new line obj\n",
     "                new_line = line.copy()\n",
-    "                \n",
+    "\n",
     "                # need to remove filtered snps from ped line\n",
     "                for index in sorted(self.filtered, reverse=True):\n",
     "                    # index is snp position. Need to delete two fields\n",
@@ -121,7 +121,7 @@
     "\n",
     "                writer.writerow(new_line)\n",
     "                processed += 1\n",
-    "                \n",
+    "\n",
     "        logger.info(f\"Processed {processed} individuals\")"
    ]
   },
@@ -144,8 +144,8 @@
    "source": [
     "assaf_dataset = Dataset.objects.get(file=\"SMARTER-500-ASSAF.zip\")\n",
     "plinkio = CustomTextPlinkIO(\n",
-    "    prefix=str(assaf_dataset.working_dir / \"SMARTER-500-ASSAF\"), \n",
-    "    species=assaf_dataset.species, \n",
+    "    prefix=str(assaf_dataset.working_dir / \"SMARTER-500-ASSAF\"),\n",
+    "    species=assaf_dataset.species,\n",
     "    chip_name=assaf_dataset.chip_name)\n",
     "plinkio.n_of_individuals = assaf_dataset.n_of_individuals"
    ]
@@ -211,7 +211,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "afafe1e8c6b3494780c57f4750977de3",
+       "model_id": "5c725b55827b44bc9dbe19901221ec1c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -221,13 +221,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Error for SNP 4:AX-169033323: C/C <> A/G\n"
-     ]
     },
     {
      "data": {
@@ -261,7 +254,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b79b87ec0584469aabe90a0ef8c148d7",
+       "model_id": "82c8d6b01b72433bafc53ced04172c33",
        "version_major": 2,
        "version_minor": 0
       },
@@ -314,8 +307,8 @@
    "source": [
     "castellana_ovine = Dataset.objects.get(file=\"Castellana.zip\")\n",
     "plinkio = CustomAffyPlinkIO(\n",
-    "    prefix=str(castellana_ovine.working_dir / \"Castellana/20220131 Ovine\"), \n",
-    "    species=castellana_ovine.species, \n",
+    "    prefix=str(castellana_ovine.working_dir / \"Castellana/20220131 Ovine\"),\n",
+    "    species=castellana_ovine.species,\n",
     "    chip_name=castellana_ovine.chip_name)\n",
     "plinkio.n_of_individuals = castellana_ovine.n_of_individuals"
    ]
@@ -381,7 +374,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b09ed8979ccc43239eaff84a93febd47",
+       "model_id": "f58728398ef145f79f7ac2e3a66d843a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -391,13 +384,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Error for SNP 4:AX-169033323: C/C <> A/G\n"
-     ]
     },
     {
      "data": {
@@ -431,7 +417,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c41db2c2a414224b6d18fd5ec06bdf7",
+       "model_id": "e973a4ec24a54a2aa2b33dc8415dc4ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -475,7 +461,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Got {'Assaf', 'SMARTER'} breeds\n"
+      "Got {'SMARTER', 'Assaf'} breeds\n"
      ]
     }
    ],
@@ -487,7 +473,7 @@
     "    if breed not in breeds_castellana:\n",
     "        breeds_castellana.add(breed)\n",
     "    samples_castellana.add(sample)\n",
-    "    \n",
+    "\n",
     "print(f\"Got {breeds_castellana} breeds\")"
    ]
   },
@@ -510,8 +496,8 @@
    "source": [
     "churra_dataset = Dataset.objects.get(file=\"Churra.zip\")\n",
     "plinkio = CustomAffyPlinkIO(\n",
-    "    prefix=str(churra_dataset.working_dir / \"Churra/Churra_SMARTER_JJsent\"), \n",
-    "    species=churra_dataset.species, \n",
+    "    prefix=str(churra_dataset.working_dir / \"Churra/Churra_SMARTER_JJsent\"),\n",
+    "    species=churra_dataset.species,\n",
     "    chip_name=churra_dataset.chip_name)\n",
     "plinkio.n_of_individuals = churra_dataset.n_of_individuals"
    ]
@@ -660,7 +646,7 @@
     "for i, location in enumerate(plinkio.src_locations):\n",
     "    if not location:\n",
     "        plinkio.src_locations[i] = affy_locations[i]\n",
-    "        \n",
+    "\n",
     "for i, name in enumerate(plinkio.variants_name):\n",
     "    if not name:\n",
     "        plinkio.variants_name[i] = affy_variants_name[i]"
@@ -685,7 +671,7 @@
     "\n",
     "for idx, location in enumerate(plinkio.src_locations):\n",
     "    if not location:\n",
-    "       plinkio.filtered.add(idx) "
+    "       plinkio.filtered.add(idx)"
    ]
   },
   {
@@ -705,7 +691,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b324b7d65a184370853633dc9116f905",
+       "model_id": "8819fc450f88487a80da6439fe241444",
        "version_major": 2,
        "version_minor": 0
       },
@@ -715,13 +701,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Error for SNP 2:AX-117092676: C/C <> A/G\n"
-     ]
     },
     {
      "data": {
@@ -755,7 +734,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97e50c9ba19c4afaba750c684d7add85",
+       "model_id": "915b8a7986144a09a9aa35c02bca6b68",
        "version_major": 2,
        "version_minor": 0
       },
@@ -765,13 +744,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Error for SNP 3245:rs430225014: C/C <> A/G\n"
-     ]
     },
     {
      "data": {
@@ -923,7 +895,7 @@
     "snp_ids = Counter()\n",
     "for snp in plinkio.mapdata:\n",
     "    snp_ids.update([snp.name])\n",
-    "    \n",
+    "\n",
     "duplicates = {x: count for x, count in snp_ids.items() if count > 1}\n",
     "duplicates"
    ]
@@ -965,7 +937,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "feff6a0ddd56423086b06d6a9afefe77",
+       "model_id": "39e7ed1f4b6848dba9dcff2c3ca94419",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1062,21 +1034,21 @@
     "    # define the minimal set of smarter metadata\n",
     "    data[\"original_id\"].append(line[1])\n",
     "    data[\"fid\"].append(line[0])\n",
-    "    \n",
+    "\n",
     "    # this breed is already in smarter\n",
     "    data[\"breed_name\"].append(\"Churra\")\n",
     "    data[\"breed_code\"].append(\"CHU\")\n",
-    "    \n",
+    "\n",
     "    # other data I know\n",
     "    data[\"country\"].append(\"Spain\")\n",
     "    data[\"purpose\"].append(\"Milk\")\n",
-    "    \n",
+    "\n",
     "    # determining GPS coordinates\n",
     "    key = line[1][:2]\n",
     "    latlong = coordinates[key]\n",
     "    data[\"latitude\"].append(latlong[0])\n",
     "    data[\"longitude\"].append(latlong[1])\n",
-    "    \n",
+    "\n",
     "# ok transform into dataframe\n",
     "df = pd.DataFrame(data=data)"
    ]
