--- a/notebooks/exploratory/0.18.1-spanish_sheeps_2.ipynb
+++ b/notebooks/exploratory/0.18.1-spanish_sheeps_2.ipynb
@@ -52,34 +52,34 @@
    "source": [
     "class CustomMixin():\n",
     "    n_of_individuals = None\n",
-    "    \n",
-    "    def process_pedfile(self, coding=\"top\"):\n",
+    "\n",
+    "    def process_pedfile(self, src_coding=\"top\"):\n",
     "        for line in tqdm(self.read_pedfile(), total=self.n_of_individuals):\n",
-    "            _ = self._process_genotypes(line, coding)\n",
-    "            \n",
+    "            _ = self._process_genotypes(line, src_coding)\n",
+    "\n",
     "        return True\n",
-    "    \n",
+    "\n",
     "    def is_top(self):\n",
     "        try:\n",
-    "            return self.process_pedfile(coding='top')\n",
-    "        \n",
+    "            return self.process_pedfile(src_coding='top')\n",
+    "\n",
     "        except CodingException:\n",
     "            return False\n",
-    "    \n",
+    "\n",
     "    def is_forward(self):\n",
     "        try:\n",
-    "            return self.process_pedfile(coding='forward')\n",
-    "        \n",
+    "            return self.process_pedfile(src_coding='forward')\n",
+    "\n",
     "        except CodingException:\n",
     "            return False\n",
-    "        \n",
+    "\n",
     "    def is_affymetrix(self):\n",
     "        try:\n",
-    "            return self.process_pedfile(coding='affymetrix')\n",
-    "        \n",
+    "            return self.process_pedfile(src_coding='affymetrix')\n",
+    "\n",
     "        except CodingException:\n",
     "            return False\n",
-    "        \n",
+    "\n",
     "class CustomTextPlinkIO(CustomMixin, TextPlinkIO):\n",
     "    pass"
    ]
@@ -103,8 +103,8 @@
    "source": [
     "dataset_20220326 = Dataset.objects.get(file=\"20220326_resultados_SNP.zip\")\n",
     "plinkio = CustomTextPlinkIO(\n",
-    "    prefix=str(dataset_20220326.working_dir / \"20220326_resultados_SNP/20220326_Ovine\"), \n",
-    "    species=dataset_20220326.species, \n",
+    "    prefix=str(dataset_20220326.working_dir / \"20220326_resultados_SNP/20220326_Ovine\"),\n",
+    "    species=dataset_20220326.species,\n",
     "    chip_name=dataset_20220326.chip_name)\n",
     "plinkio.n_of_individuals = dataset_20220326.n_of_individuals"
    ]
@@ -170,7 +170,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f6f36b273e84fa5b68f513261b6f2d4",
+       "model_id": "b3a06f788f8549069fb98c5a8579d8a5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -214,7 +214,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Got {'Assaf', 'SMARTER'} breeds\n"
+      "Got {'SMARTER', 'Assaf'} breeds\n"
      ]
     }
    ],
@@ -226,7 +226,7 @@
     "    if breed not in breeds_castellana:\n",
     "        breeds_castellana.add(breed)\n",
     "    samples_castellana.add(sample)\n",
-    "    \n",
+    "\n",
     "print(f\"Got {breeds_castellana} breeds\")"
    ]
   },
@@ -249,8 +249,8 @@
    "source": [
     "dataset_20220428 = Dataset.objects.get(file=\"20220428_Smarter_Ovine.zip\")\n",
     "plinkio = CustomTextPlinkIO(\n",
-    "    prefix=str(dataset_20220428.working_dir / \"20220428_Smarter_Ovine/20220428_Smarter_Ovine\"), \n",
-    "    species=dataset_20220428.species, \n",
+    "    prefix=str(dataset_20220428.working_dir / \"20220428_Smarter_Ovine/20220428_Smarter_Ovine\"),\n",
+    "    species=dataset_20220428.species,\n",
     "    chip_name=dataset_20220428.chip_name)\n",
     "plinkio.n_of_individuals = dataset_20220428.n_of_individuals"
    ]
@@ -316,7 +316,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8fed4842770847aebc33826bc4480e9c",
+       "model_id": "4c01c21366e24df79112e5e0ffb6e7a3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -372,7 +372,7 @@
     "    if breed not in breeds_ojalada:\n",
     "        breeds_ojalada.add(breed)\n",
     "    samples_ojalada.add(sample)\n",
-    "    \n",
+    "\n",
     "print(f\"Got {breeds_ojalada} breeds\")"
    ]
   },
@@ -395,8 +395,8 @@
    "source": [
     "dataset_20220503 = Dataset.objects.get(file=\"20220503_Ovine.zip\")\n",
     "plinkio = CustomTextPlinkIO(\n",
-    "    prefix=str(dataset_20220503.working_dir / \"20220503_Ovine/20220503_Ovine\"), \n",
-    "    species=dataset_20220503.species, \n",
+    "    prefix=str(dataset_20220503.working_dir / \"20220503_Ovine/20220503_Ovine\"),\n",
+    "    species=dataset_20220503.species,\n",
     "    chip_name=dataset_20220503.chip_name)\n",
     "plinkio.n_of_individuals = dataset_20220503.n_of_individuals"
    ]
@@ -462,7 +462,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a5b607018224bc08ce6dbb42fc0bbbf",
+       "model_id": "bc592ad063334c5ea70de5afec826375",
        "version_major": 2,
        "version_minor": 0
       },
@@ -518,7 +518,7 @@
     "    if breed not in breeds_assaf:\n",
     "        breeds_assaf.add(breed)\n",
     "    samples_assaf.add(sample)\n",
-    "    \n",
+    "\n",
     "print(f\"Got {breeds_assaf} breeds\")"
    ]
   },
