--- a/notebooks/exploratory/0.19.0-hungary_sheeps.ipynb
+++ b/notebooks/exploratory/0.19.0-hungary_sheeps.ipynb
@@ -51,34 +51,34 @@
    "source": [
     "class CustomMixin():\n",
     "    n_of_individuals = None\n",
-    "    \n",
-    "    def process_pedfile(self, coding=\"top\"):\n",
+    "\n",
+    "    def process_pedfile(self, src_coding=\"top\"):\n",
     "        for line in tqdm(self.read_pedfile(), total=self.n_of_individuals):\n",
-    "            _ = self._process_genotypes(line, coding)\n",
-    "            \n",
+    "            _ = self._process_genotypes(line, src_coding)\n",
+    "\n",
     "        return True\n",
-    "    \n",
+    "\n",
     "    def is_top(self):\n",
     "        try:\n",
-    "            return self.process_pedfile(coding='top')\n",
-    "        \n",
+    "            return self.process_pedfile(src_coding='top')\n",
+    "\n",
     "        except CodingException:\n",
     "            return False\n",
-    "    \n",
+    "\n",
     "    def is_forward(self):\n",
     "        try:\n",
-    "            return self.process_pedfile(coding='forward')\n",
-    "        \n",
+    "            return self.process_pedfile(src_coding='forward')\n",
+    "\n",
     "        except CodingException:\n",
     "            return False\n",
-    "        \n",
+    "\n",
     "    def is_affymetrix(self):\n",
     "        try:\n",
-    "            return self.process_pedfile(coding='affymetrix')\n",
-    "        \n",
+    "            return self.process_pedfile(src_coding='affymetrix')\n",
+    "\n",
     "        except CodingException:\n",
     "            return False\n",
-    "        \n",
+    "\n",
     "class CustomTextPlinkIO(CustomMixin, TextPlinkIO):\n",
     "    pass"
    ]
@@ -100,8 +100,8 @@
    "source": [
     "hungarian_dataset = Dataset.objects.get(file=\"NativesheepBreeds_Hu.zip\")\n",
     "plinkio = CustomTextPlinkIO(\n",
-    "    prefix=str(hungarian_dataset.working_dir / \"NativesheepBreeds_Hu/NativeSheepGenotypes\"), \n",
-    "    species=hungarian_dataset.species, \n",
+    "    prefix=str(hungarian_dataset.working_dir / \"NativesheepBreeds_Hu/NativeSheepGenotypes\"),\n",
+    "    species=hungarian_dataset.species,\n",
     "    chip_name=hungarian_dataset.chip_name)\n",
     "plinkio.n_of_individuals = hungarian_dataset.n_of_individuals"
    ]
@@ -155,7 +155,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "901cbe6aec744ed793b54a80bac0dac8",
+       "model_id": "4dadb44baab344c0b99e31b3c511853b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -165,13 +165,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Error for SNP 1:DU415336_399.1: G/G <> A/C\n"
-     ]
     },
     {
      "data": {
@@ -205,7 +198,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "790f3fd566144c919fc159c749377092",
+       "model_id": "9eab0d71843f4b50b5c41a081ebd78e8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -249,7 +242,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Got {'Suffolk', 'Merino', 'W.Dorper', 'Turcana', 'R.Tsigai', 'Tsigai', 'I.France', 'Racka', 'Tetra', 'Dorper'} breeds\n"
+      "Got {'I.France', 'Racka', 'R.Tsigai', 'W.Dorper', 'Merino', 'Dorper', 'Suffolk', 'Turcana', 'Tsigai', 'Tetra'} breeds\n"
      ]
     }
    ],
@@ -260,7 +253,7 @@
     "    breed = line[0]\n",
     "    if breed not in breeds:\n",
     "        breeds.add(breed)\n",
-    "    \n",
+    "\n",
     "print(f\"Got {breeds} breeds\")"
    ]
   },
@@ -425,7 +418,8 @@
     }
    ],
    "source": [
-    "with open(hungarian_dataset.working_dir / \"NativesheepBreeds_Hu/NativeSheep GPS.xlsx\", \"rb\") as handle:\n",
+    "hungarian_metadata = Dataset.objects.get(file=\"Nativesheep_Hu_metadata.zip\")\n",
+    "with open(hungarian_metadata.working_dir / \"NativeSheep GPS.xlsx\", \"rb\") as handle:\n",
     "    info = pd.read_excel(handle)\n",
     "info.head()"
    ]
@@ -917,7 +911,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "breed2code = {'Tsigai': ('Tsigai', 'TSI'), 'Merino': ('Merino', 'MER'), 'Dorper': ('Dorper', 'DRP'), 'White Dorper': ('W.Dorper', 'WDR'), \n",
+    "breed2code = {'Tsigai': ('Tsigai', 'TSI'), 'Merino': ('Merino', 'MER'), 'Dorper': ('Dorper', 'DRP'), 'White Dorper': ('W.Dorper', 'WDR'),\n",
     "              'Bábolna Tetra': ('Tetra', 'BAT'), 'Île de France': ('I.France', 'IDF'), 'Suffolk': ('Suffolk', 'SUF'),\n",
     "              'Hortobágy Racka': ('Racka', 'HRR'), 'Rusty Tsigai': ('R.Tsigai', 'RST'), 'Turcana': ('Turcana', 'TRC')}"
    ]
