--- a/notebooks/exploratory/0.22.0-bunop-new_sheep_background_data.ipynb
+++ b/notebooks/exploratory/0.22.0-bunop-new_sheep_background_data.ipynb
@@ -65,53 +65,53 @@
    "source": [
     "class CustomMixin():\n",
     "    n_of_individuals = None\n",
-    "    \n",
-    "    def process_pedfile(self, coding=\"top\"):\n",
+    "\n",
+    "    def process_pedfile(self, src_coding=\"top\"):\n",
     "        for line in tqdm(self.read_pedfile(), total=self.n_of_individuals):\n",
-    "            _ = self._process_genotypes(line, coding)\n",
-    "            \n",
+    "            _ = self._process_genotypes(line, src_coding)\n",
+    "\n",
     "        return True\n",
-    "    \n",
+    "\n",
     "    def is_top(self):\n",
     "        try:\n",
-    "            return self.process_pedfile(coding='top')\n",
-    "        \n",
+    "            return self.process_pedfile(src_coding='top')\n",
+    "\n",
     "        except CodingException as exc:\n",
     "            logger.error(exc)\n",
     "            return False\n",
-    "    \n",
+    "\n",
     "    def is_forward(self):\n",
     "        try:\n",
-    "            return self.process_pedfile(coding='forward')\n",
-    "        \n",
+    "            return self.process_pedfile(src_coding='forward')\n",
+    "\n",
     "        except CodingException as exc:\n",
     "            logger.error(exc)\n",
     "            return False\n",
-    "        \n",
+    "\n",
     "    def is_affymetrix(self):\n",
     "        try:\n",
-    "            return self.process_pedfile(coding='affymetrix')\n",
-    "        \n",
+    "            return self.process_pedfile(src_coding='affymetrix')\n",
+    "\n",
     "        except CodingException as exc:\n",
     "            logger.error(exc)\n",
     "            return False\n",
-    "        \n",
+    "\n",
     "    def is_illumina(self):\n",
     "        try:\n",
-    "            return self.process_pedfile(coding='illumina')\n",
-    "        \n",
+    "            return self.process_pedfile(src_coding='illumina')\n",
+    "\n",
     "        except CodingException as exc:\n",
     "            logger.error(exc)\n",
     "            return False\n",
-    "        \n",
+    "\n",
     "class CustomTextPlinkIO(CustomMixin, TextPlinkIO):\n",
     "    pass\n",
     "\n",
     "class CustomBinaryPlinkIO(CustomMixin, BinaryPlinkIO):\n",
-    "    def process_pedfile(self, coding=\"top\"):\n",
+    "    def process_pedfile(self, src_coding=\"top\"):\n",
     "        for line in tqdm(self.read_pedfile(), total=len(self.plink_file.get_samples())):\n",
-    "            _ = self._process_genotypes(line, coding)\n",
-    "            \n",
+    "            _ = self._process_genotypes(line, src_coding)\n",
+    "\n",
     "        return True"
    ]
   },
@@ -220,7 +220,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1698253982904a22b0df92cb60da3274",
+       "model_id": "d8c53a08951644bc9dbbaa2e99016978",
        "version_major": 2,
        "version_minor": 0
       },
@@ -264,7 +264,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Got {'SouthWalesWelshMountain', 'HillRadnor', 'ClunForest', 'ImprovedWelshMountain', 'LlandoveryWhiteFaced', 'Beulah', 'Llawenog', 'KerryHill', 'Balwen', 'DolgellauWelshMountain', 'TalybontWelshMountain', 'BrecknockHillCheviot', 'HardySpeckledFaced', 'Lleyn', 'Llanwenog', 'WelshMountainHillFlock', 'TregaronWelshMountain', 'BadgerFaced', 'BlackWelshMountain'} breeds\n"
+      "Got {'Llanwenog', 'Balwen', 'TregaronWelshMountain', 'Llawenog', 'TalybontWelshMountain', 'SouthWalesWelshMountain', 'Lleyn', 'LlandoveryWhiteFaced', 'DolgellauWelshMountain', 'ClunForest', 'WelshMountainHillFlock', 'BrecknockHillCheviot', 'HillRadnor', 'BadgerFaced', 'ImprovedWelshMountain', 'Beulah', 'KerryHill', 'HardySpeckledFaced', 'BlackWelshMountain'} breeds\n"
      ]
     }
    ],
@@ -275,7 +275,7 @@
     "    breed = line[0]\n",
     "    if breed not in breeds:\n",
     "        breeds.add(breed)\n",
-    "    \n",
+    "\n",
     "print(f\"Got {breeds} breeds\")"
    ]
   },
@@ -310,7 +310,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'SouthWalesWelshMountain': 'South Wales Welsh Mountain', 'HillRadnor': 'Hill Radnor', 'ClunForest': 'Clun Forest', 'ImprovedWelshMountain': 'Improved Welsh Mountain', 'LlandoveryWhiteFaced': 'Llandovery White Faced', 'Beulah': 'Beulah', 'Llawenog': 'Llawenog', 'KerryHill': 'Kerry Hill', 'Balwen': 'Balwen', 'DolgellauWelshMountain': 'Dolgellau Welsh Mountain', 'TalybontWelshMountain': 'Talybont Welsh Mountain', 'BrecknockHillCheviot': 'Brecknock Hill Cheviot', 'HardySpeckledFaced': 'Hardy Speckled Faced', 'Lleyn': 'Lleyn', 'Llanwenog': 'Llanwenog', 'WelshMountainHillFlock': 'Welsh Mountain Hill Flock', 'TregaronWelshMountain': 'Tregaron Welsh Mountain', 'BadgerFaced': 'Badger Faced', 'BlackWelshMountain': 'Black Welsh Mountain'}\n"
+      "{'Llanwenog': 'Llanwenog', 'Balwen': 'Balwen', 'TregaronWelshMountain': 'Tregaron Welsh Mountain', 'Llawenog': 'Llawenog', 'TalybontWelshMountain': 'Talybont Welsh Mountain', 'SouthWalesWelshMountain': 'South Wales Welsh Mountain', 'Lleyn': 'Lleyn', 'LlandoveryWhiteFaced': 'Llandovery White Faced', 'DolgellauWelshMountain': 'Dolgellau Welsh Mountain', 'ClunForest': 'Clun Forest', 'WelshMountainHillFlock': 'Welsh Mountain Hill Flock', 'BrecknockHillCheviot': 'Brecknock Hill Cheviot', 'HillRadnor': 'Hill Radnor', 'BadgerFaced': 'Badger Faced', 'ImprovedWelshMountain': 'Improved Welsh Mountain', 'Beulah': 'Beulah', 'KerryHill': 'Kerry Hill', 'HardySpeckledFaced': 'Hardy Speckled Faced', 'BlackWelshMountain': 'Black Welsh Mountain'}\n"
      ]
     }
    ],
@@ -319,7 +319,7 @@
     "\n",
     "for breed in breeds:\n",
     "    breeds2dict[breed] = \" \".join(camel_case_split(breed))\n",
-    "    \n",
+    "\n",
     "print(breeds2dict)"
    ]
   },
@@ -344,7 +344,7 @@
     "    data[\"breed\"].append(breeds2dict[line[0]])\n",
     "    data[\"fid\"].append(line[0])\n",
     "    data[\"original_id\"].append(line[1])\n",
-    "    \n",
+    "\n",
     "welsh_metadata = pd.DataFrame(data=data)\n",
     "welsh_metadata.to_excel(\"welsh_metadata.xlsx\", index=False)"
    ]
@@ -469,7 +469,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "154c58b3c1e34d8daab1ba84433596fa",
+       "model_id": "c47e48b6f4d947708be1fdbad12e34f0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1083,7 +1083,7 @@
     "for fid, iid, *_ in plinkio.read_pedfile():\n",
     "    tmp[\"code\"].append(fid)\n",
     "    tmp[\"original_id\"].append(iid)\n",
-    "            \n",
+    "\n",
     "tmp = pd.DataFrame(data=tmp)\n",
     "tmp.head()"
    ]
@@ -2041,7 +2041,7 @@
     "        if SampleSheep.objects.filter(dataset=sheep_hapmap, original_id=iid).count() == 0:\n",
     "            tmp[\"code\"].append(fid)\n",
     "            tmp[\"original_id\"].append(iid)\n",
-    "            \n",
+    "\n",
     "tmp = pd.DataFrame(data=tmp)\n",
     "tmp.head()"
    ]
@@ -2498,7 +2498,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2edea2942669470d88b1ae93da9a6375",
+       "model_id": "c77eb62bceae401083f1e2b3e062d264",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2876,7 +2876,7 @@
     "for fid, iid, *_ in plinkio.read_pedfile():\n",
     "    tmp[\"code\"].append(fid)\n",
     "    tmp[\"original_id\"].append(iid)\n",
-    "            \n",
+    "\n",
     "tmp = pd.DataFrame(data=tmp)\n",
     "tmp.head()"
    ]
@@ -3074,7 +3074,7 @@
    ],
    "source": [
     "ciani_2020_metadata.drop([\n",
-    "    \"code\", \"Northern latitudea\", \"Eastern longitudea\", \n",
+    "    \"code\", \"Northern latitudea\", \"Eastern longitudea\",\n",
     "    \"Breed (country of sampling)b\", \"country_old\", \"region_old\",\n",
     "    \"1477 sheep\", \"2121 sheep\", \"44,430 SNPs\", \"21,960 SNPs\"\n",
     "], axis=1, inplace=True)\n",
@@ -3100,16 +3100,16 @@
      "data": {
       "text/plain": [
        "Croatian Isles       90\n",
-       "Sardinian mouflon    24\n",
-       "Laticauda            24\n",
-       "Norwegian White      24\n",
-       "Zel                  24\n",
+       "Gentile di Puglia    24\n",
+       "Bergamasca           24\n",
+       "Massese              24\n",
+       "Xisqueta             24\n",
        "                     ..\n",
        "Dalmatian             4\n",
        "Schoonebeker          4\n",
-       "Privorska             2\n",
        "Recka                 2\n",
        "Dubska                2\n",
+       "Privorska             2\n",
        "Name: breed, Length: 61, dtype: int64"
       ]
      },
@@ -3306,7 +3306,7 @@
     "        return \"Ovis orientalis\"\n",
     "    else:\n",
     "        return \"Ovis aries\"\n",
-    "    \n",
+    "\n",
     "ciani_2020_metadata[\"species\"] = ciani_2020_metadata[\"breed\"].apply(get_species)\n",
     "ciani_2020_metadata.head()"
    ]
@@ -3482,7 +3482,7 @@
     "        return True\n",
     "    else:\n",
     "        return False\n",
-    "    \n",
+    "\n",
     "to_remove = croatian_isles[~np.vectorize(isin_island)(croatian_isles[\"original_id\"], croatian_isles[\"region\"])].index"
    ]
   },
@@ -3610,7 +3610,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f96e737a16974cfa9542ae60caa1e64a",
+       "model_id": "0bbde783cce047268ce5a825f40390a7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3724,7 +3724,7 @@
     "for fid, iid, *_ in plinkio.read_pedfile():\n",
     "    tmp[\"code\"].append(fid)\n",
     "    tmp[\"original_id\"].append(iid)\n",
-    "            \n",
+    "\n",
     "tmp = pd.DataFrame(data=tmp)\n",
     "tmp.head()"
    ]
@@ -4090,7 +4090,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9052d6c910054c23bd8ea44bc329e26f",
+       "model_id": "ebac2f58b31f4a678a1b56dfb6bf3e73",
        "version_major": 2,
        "version_minor": 0
       },
@@ -4636,7 +4636,7 @@
     "        return \"HMR\"\n",
     "    else:\n",
     "        raise Exception(\"Breed not found!\")\n",
-    "        \n",
+    "\n",
     "belabdi_2019_metadata[\"code\"] = belabdi_2019_metadata[\"breed\"].apply(breed2code)\n",
     "belabdi_2019_metadata.head()"
    ]
@@ -4788,7 +4788,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1a1653791934df181f7e5ce0b9a7db2",
+       "model_id": "46f9b1f0b5e541f3b320a0fba510b53f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -4902,7 +4902,7 @@
     "for fid, iid, *_ in plinkio.read_pedfile():\n",
     "    tmp[\"code\"].append(fid)\n",
     "    tmp[\"original_id\"].append(iid)\n",
-    "            \n",
+    "\n",
     "tmp = pd.DataFrame(data=tmp)\n",
     "tmp.head()"
    ]
