--- a/notebooks/exploratory/0.23.0-bunop-burren_goats.ipynb
+++ b/notebooks/exploratory/0.23.0-bunop-burren_goats.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "id": "3ec6d548-faa4-442f-a8a2-5e38ed92c43e",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "id": "0ce663a1-be46-4d77-9641-e866446ddb86",
    "metadata": {},
    "outputs": [],
@@ -41,59 +41,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "id": "5c721586-2d22-4e34-b78c-5a201940111b",
    "metadata": {},
    "outputs": [],
    "source": [
     "class CustomMixin():\n",
     "    n_of_individuals = None\n",
-    "    \n",
-    "    def process_pedfile(self, coding=\"top\"):\n",
+    "\n",
+    "    def process_pedfile(self, src_coding=\"top\"):\n",
     "        for line in tqdm(self.read_pedfile(), total=self.n_of_individuals):\n",
-    "            _ = self._process_genotypes(line, coding)\n",
-    "            \n",
+    "            _ = self._process_genotypes(line, src_coding)\n",
+    "\n",
     "        return True\n",
-    "    \n",
+    "\n",
     "    def is_top(self):\n",
     "        try:\n",
-    "            return self.process_pedfile(coding='top')\n",
-    "        \n",
+    "            return self.process_pedfile(src_coding='top')\n",
+    "\n",
     "        except CodingException as exc:\n",
     "            logger.error(exc)\n",
     "            return False\n",
-    "    \n",
+    "\n",
     "    def is_forward(self):\n",
     "        try:\n",
-    "            return self.process_pedfile(coding='forward')\n",
-    "        \n",
+    "            return self.process_pedfile(src_coding='forward')\n",
+    "\n",
     "        except CodingException as exc:\n",
     "            logger.error(exc)\n",
     "            return False\n",
-    "        \n",
+    "\n",
     "    def is_affymetrix(self):\n",
     "        try:\n",
-    "            return self.process_pedfile(coding='affymetrix')\n",
-    "        \n",
+    "            return self.process_pedfile(src_coding='affymetrix')\n",
+    "\n",
     "        except CodingException as exc:\n",
     "            logger.error(exc)\n",
     "            return False\n",
-    "        \n",
+    "\n",
     "    def is_illumina(self):\n",
     "        try:\n",
-    "            return self.process_pedfile(coding='illumina')\n",
-    "        \n",
+    "            return self.process_pedfile(src_coding='illumina')\n",
+    "\n",
     "        except CodingException as exc:\n",
     "            logger.error(exc)\n",
     "            return False\n",
-    "        \n",
+    "\n",
     "class CustomTextPlinkIO(CustomMixin, TextPlinkIO):\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "id": "3c0239f5-ebba-4ece-a685-b7d60e405e92",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
        " 'doi_10.5061_dryad.q1cv6__v1/king.con']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "id": "e75b1755-5656-4fc5-97dc-9e7f16811512",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "id": "9ae9e9b6-e99e-4b1f-83b1-c19738d53538",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "id": "2db5db6b-c99c-4e05-81f8-94241f38353d",
    "metadata": {},
    "outputs": [
@@ -201,19 +201,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "id": "2e9782b3-0579-48b6-bc05-d8adcfd58045",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75c38ea2fa464cb2b97484f1e9d12007",
+       "model_id": "e4f70d46c67542c08d8623144578c6b9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/473 [00:00<?, ?it/s]"
+       "  0%|          | 0/364 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -225,7 +225,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "id": "f176e3e0-4911-493f-97ff-33925763506d",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
     "    breed = line[0]\n",
     "    if breed not in breeds:\n",
     "        breeds.add(breed)\n",
-    "    \n",
+    "\n",
     "print(f\"Got {breeds} breeds\")"
    ]
   },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "id": "210aa099-46ce-4dea-9cce-a83dc99def72",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "id": "9aa8719e-f7f6-480a-9f22-2abe93f1c28a",
    "metadata": {},
    "outputs": [
@@ -476,7 +476,7 @@
        "4             4                                             CHA  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "id": "1a6670d8-e54e-4208-b07f-c4b6132c930c",
    "metadata": {},
    "outputs": [
@@ -588,7 +588,7 @@
        "4                                             CHA  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "id": "b1afdc0a-fd60-4bdb-8c0e-244f33261207",
    "metadata": {},
    "outputs": [
@@ -706,7 +706,7 @@
        "10     10  TOG"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "id": "1c387284-2bb8-4ba5-aa80-fc549082095c",
    "metadata": {},
    "outputs": [
@@ -748,7 +748,7 @@
        " 10: 'TOG'}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "id": "92282b0a-fa48-4573-a18f-9b1ee3ca5fcf",
    "metadata": {},
    "outputs": [
@@ -850,7 +850,7 @@
        "4            2       BST13  goat5  GST"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "id": "68292d60-774b-4141-b1d8-f85f0f0490bf",
    "metadata": {},
    "outputs": [],
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "id": "8ce7a8ec-88de-4567-b041-e5682c027f16",
    "metadata": {},
    "outputs": [
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "id": "9a279606-ef77-4002-97a0-601049707e41",
    "metadata": {},
    "outputs": [
@@ -1020,7 +1020,7 @@
        "30            4       GFG26  goat31  ALP"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "id": "ffaa81ab-bfa8-48c1-b841-4860cf0ecc81",
    "metadata": {},
    "outputs": [
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "id": "48529569-b0eb-4296-babd-49c0481b52ec",
    "metadata": {},
    "outputs": [
@@ -1169,7 +1169,7 @@
        "4            2       BST13  goat5  GST  Grisons striped"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "id": "9b8792c9-c72e-466b-b2f9-4c2d7ab3c85f",
    "metadata": {},
    "outputs": [
@@ -1281,7 +1281,7 @@
        "4            2       BST13  goat5  GST  Grisons striped  Switzerland"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 51,
    "id": "c6dee27a-ec4d-455a-9574-3c9e4ea3b041",
    "metadata": {},
    "outputs": [
@@ -1363,7 +1363,7 @@
        "4  goat131"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1383,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 52,
    "id": "6c05251a-43f3-4cd8-94cc-9d1992137699",
    "metadata": {},
    "outputs": [
@@ -1478,7 +1478,7 @@
        "goat5            2       BST13  GST  Grisons striped  Switzerland"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1498,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 53,
    "id": "c5aac1dc-606a-43f1-ac9b-1009163b6b75",
    "metadata": {},
    "outputs": [],
@@ -1517,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 54,
    "id": "d5acbf26-1b38-4ccc-bd07-1f3ff114b24a",
    "metadata": {},
    "outputs": [
@@ -1655,7 +1655,7 @@
        "4                                                NaN  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1677,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
    "id": "8c4b1253-bc3b-4378-b2c7-d8e32aa0b503",
    "metadata": {},
    "outputs": [
@@ -1815,7 +1815,7 @@
        "4                                                NaN  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1835,7 +1835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 56,
    "id": "16c60517-9e02-4eaf-a8a9-1c9a4c51b3e1",
    "metadata": {},
    "outputs": [
@@ -1985,7 +1985,7 @@
        "4                                                NaN      85cm        75cm  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2007,7 +2007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 57,
    "id": "b2e9ab80-4901-4754-9ba6-befa7477b2c1",
    "metadata": {},
    "outputs": [],
@@ -2034,7 +2034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 58,
    "id": "5c46c37d-1e2c-425f-8099-0bf2eaa0c04a",
    "metadata": {},
    "outputs": [],
@@ -2044,11 +2044,11 @@
     "\n",
     "with open(ped_fix, \"w\") as handle:\n",
     "    writer = csv.writer(handle, delimiter=' ', lineterminator=\"\\n\")\n",
-    "    \n",
+    "\n",
     "    for line in plinkio.read_pedfile():\n",
     "        sample = line[1]\n",
     "        code = samples.loc[sample].code\n",
-    "        \n",
+    "\n",
     "        # update breed\n",
     "        line[0] = code\n",
     "        writer.writerow(line)"
