--- a/notebooks/exploratory/0.24.0-bunop-cortellari_goats.ipynb
+++ b/notebooks/exploratory/0.24.0-bunop-cortellari_goats.ipynb
@@ -48,50 +48,50 @@
    "source": [
     "class CustomMixin():\n",
     "    n_of_individuals = None\n",
-    "    \n",
-    "    def process_pedfile(self, coding=\"top\"):\n",
+    "\n",
+    "    def process_pedfile(self, src_coding=\"top\"):\n",
     "        for line in tqdm(self.read_pedfile(), total=self.n_of_individuals):\n",
-    "            _ = self._process_genotypes(line, coding)\n",
-    "            \n",
+    "            _ = self._process_genotypes(line, src_coding)\n",
+    "\n",
     "        return True\n",
-    "    \n",
+    "\n",
     "    def is_top(self):\n",
     "        try:\n",
-    "            return self.process_pedfile(coding='top')\n",
-    "        \n",
+    "            return self.process_pedfile(src_coding='top')\n",
+    "\n",
     "        except CodingException as exc:\n",
     "            logger.error(exc)\n",
     "            return False\n",
-    "    \n",
+    "\n",
     "    def is_forward(self):\n",
     "        try:\n",
-    "            return self.process_pedfile(coding='forward')\n",
-    "        \n",
+    "            return self.process_pedfile(src_coding='forward')\n",
+    "\n",
     "        except CodingException as exc:\n",
     "            logger.error(exc)\n",
     "            return False\n",
-    "        \n",
+    "\n",
     "    def is_affymetrix(self):\n",
     "        try:\n",
-    "            return self.process_pedfile(coding='affymetrix')\n",
-    "        \n",
+    "            return self.process_pedfile(src_coding='affymetrix')\n",
+    "\n",
     "        except CodingException as exc:\n",
     "            logger.error(exc)\n",
     "            return False\n",
-    "        \n",
+    "\n",
     "    def is_illumina(self):\n",
     "        try:\n",
-    "            return self.process_pedfile(coding='illumina')\n",
-    "        \n",
+    "            return self.process_pedfile(src_coding='illumina')\n",
+    "\n",
     "        except CodingException as exc:\n",
     "            logger.error(exc)\n",
     "            return False\n",
-    "        \n",
+    "\n",
     "class CustomBinaryPlinkIO(CustomMixin, BinaryPlinkIO):\n",
-    "    def process_pedfile(self, coding=\"top\"):\n",
+    "    def process_pedfile(self, src_coding=\"top\"):\n",
     "        for line in tqdm(self.read_pedfile(), total=len(self.plink_file.get_samples())):\n",
-    "            _ = self._process_genotypes(line, coding)\n",
-    "            \n",
+    "            _ = self._process_genotypes(line, src_coding)\n",
+    "\n",
     "        return True"
    ]
   },
@@ -123,7 +123,8 @@
        " 's41598-021-89900-2/41598_2021_89900_MOESM5_ESM.xlsx',\n",
        " 's41598-021-89900-2/41598_2021_89900_MOESM1_ESM.tiff',\n",
        " 's41598-021-89900-2/king.con',\n",
-       " 's41598-021-89900-2/to_remove.csv']"
+       " 's41598-021-89900-2/to_remove.csv',\n",
+       " 's41598-021-89900-2/cortellari_samples_fix.xlsx']"
       ]
      },
      "execution_count": 4,
@@ -205,7 +206,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c58b064f1eb497cadb5a7ab1dde33dd",
+       "model_id": "57c89803d1884bf796dbc63a2aa0886a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -383,17 +384,31 @@
       "Found code 'ARG': 'Argentata (ARG) Goat' for cortellari 'Argentata dell'Etna'\n",
       "Found code 'ASP': 'Aspromontana (ASP) Goat' for cortellari 'Capra dell'Aspromonte'\n",
       "Found code 'BEZ': 'Bezoar (BEZ) Goat' for cortellari 'Bezoar (outgroup)'\n",
+      "Found code 'BIA': 'Bianca Monticellana (BIA) Goat' for cortellari 'Bianca Monticellana'\n",
       "Found code 'BIO': 'Bionda dell'Adamello (BIO) Goat' for cortellari 'Bionda dell'Adamello'\n",
+      "Found code 'CAP': 'Capestrina (CAP) Goat' for cortellari 'Capestrina'\n",
+      "Found code 'DDS': 'Derivata di Siria (DDS) Goat' for cortellari 'Derivata di Siria'\n",
+      "Found code 'FAC': 'Facciuta della Valnerina (FAC) Goat' for cortellari 'Facciuta della Valnerina'\n",
+      "Found code 'FUL': 'Fulva del Lazio (FUL) Goat' for cortellari 'Fulva del Lazio'\n",
       "Found code 'GAR': 'Garganica (GAR) Goat' for cortellari 'Garganica'\n",
+      "Found code 'GRF': 'Garfagnana (GRF) Goat' for cortellari 'Garfagnana'\n",
       "Found code 'JON': 'Jonica (JON) Goat' for cortellari 'Jonica'\n",
+      "Found code 'LIV': 'Capra di Livo (LIV) Goat' for cortellari 'Capra di Livo'\n",
       "Found code 'MAL': 'Mallorquina (MAL) Goat' for cortellari 'Maltese'\n",
+      "Found code 'MES': 'Messinese (MES) Goat' for cortellari 'Messinese'\n",
+      "Found code 'MNT_M': 'Montecristo (mainland) (MNT_M) Goat' for cortellari 'Montecristo (mainland)'\n",
+      "Found code 'MNT_I': 'Montecristo (island) (MNT_I) Goat' for cortellari 'Montecristo (island)'\n",
+      "Found code 'MON': 'Capra di Montefalcone (MON) Goat' for cortellari 'Capra di Montefalcone'\n",
+      "Found code 'MXS': 'Incrocio Maltese e Sarda (MXS) Goat' for cortellari 'Incrocio Maltese e Sarda'\n",
       "Found code 'NIC': 'Nicastrese (NIC) Goat' for cortellari 'Nicastrese'\n",
       "Found code 'NVE': 'Nera Verzasca (NVE) Goat' for cortellari 'Nera di Verzasca'\n",
       "Found code 'ORO': 'Orobica (ORO) Goat' for cortellari 'Orobica'\n",
+      "Found code 'RCC': 'Roccaverano (RCC) Goat' for cortellari 'Roccaverano'\n",
       "Found code 'RME': 'Rossa Mediterranea (RME) Goat' for cortellari 'Rossa Mediterranea'\n",
       "Found code 'SAA': 'Saanen (SAA) Goat' for cortellari 'Saanen'\n",
       "Found code 'SAR': 'Sarda (SAR) Goat' for cortellari 'Sarda'\n",
-      "Found code 'VAL': 'Valdostana (VAL) Goat' for cortellari 'Valdostana'\n"
+      "Found code 'VAL': 'Valdostana (VAL) Goat' for cortellari 'Valdostana'\n",
+      "Found code 'VLS': 'Vallesana (VLS) Goat' for cortellari 'Vallesana'\n"
      ]
     }
    ],
@@ -429,24 +444,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BIA Bianca Monticellana\n",
-      "CAP Capestrina\n",
-      "DDS Derivata di Siria\n",
-      "FAC Facciuta della Valnerina\n",
-      "FUL Fulva del Lazio\n",
       "GCI Grigia Ciociara\n",
       "GIR Girgentana\n",
-      "GRF Garfagnana\n",
-      "LIV Capra di Livo\n",
-      "MES Messinese\n",
-      "MNT_M Montecristo (mainland)\n",
-      "MNT_I Montecristo (island)\n",
-      "MON Capra di Montefalcone\n",
-      "MXS Incrocio Maltese e Sarda\n",
-      "RCC Roccaverano\n",
       "SAM Maltese sampled in Sardinia\n",
       "TER Capra di Teramo\n",
-      "VLS Vallesana\n",
       "VPS Capra della Val Passiria\n"
      ]
     }
@@ -625,20 +626,34 @@
       "Found code 'ARG': 'Argentata (ARG) Goat' for cortellari 'Argentata'\n",
       "Found code 'ASP': 'Aspromontana (ASP) Goat' for cortellari 'Aspromontana'\n",
       "Found code 'BEZ': 'Bezoar (BEZ) Goat' for cortellari 'Bezoar (outgroup)'\n",
+      "Found code 'BIA': 'Bianca Monticellana (BIA) Goat' for cortellari 'Bianca Monticellana'\n",
       "Found code 'BIO': 'Bionda dell'Adamello (BIO) Goat' for cortellari 'Bionda dell'Adamello'\n",
+      "Found code 'CAP': 'Capestrina (CAP) Goat' for cortellari 'Capestrina'\n",
+      "Found code 'DDS': 'Derivata di Siria (DDS) Goat' for cortellari 'Derivata di Siria'\n",
+      "Found code 'FAC': 'Facciuta della Valnerina (FAC) Goat' for cortellari 'Facciuta della Valnerina'\n",
+      "Found code 'FUL': 'Fulva del Lazio (FUL) Goat' for cortellari 'Fulva del Lazio'\n",
       "Found code 'GAR': 'Garganica (GAR) Goat' for cortellari 'Garganica'\n",
       "Found code 'CCG': 'Ciociara Grigia (CCG) Goat' for cortellari 'Ciociara Grigia'\n",
       "Found code 'GGT': 'Girgentana (GGT) Goat' for cortellari 'Girgentana'\n",
+      "Found code 'GRF': 'Garfagnana (GRF) Goat' for cortellari 'Garfagnana'\n",
       "Found code 'JON': 'Jonica (JON) Goat' for cortellari 'Jonica'\n",
+      "Found code 'LIV': 'Capra di Livo (LIV) Goat' for cortellari 'Capra di Livo'\n",
       "Found code 'MLT': 'Maltese (MLT) Goat' for cortellari 'Maltese'\n",
+      "Found code 'MES': 'Messinese (MES) Goat' for cortellari 'Messinese'\n",
+      "Found code 'MNT_M': 'Montecristo (mainland) (MNT_M) Goat' for cortellari 'Montecristo (mainland)'\n",
+      "Found code 'MNT_I': 'Montecristo (island) (MNT_I) Goat' for cortellari 'Montecristo (island)'\n",
+      "Found code 'MON': 'Capra di Montefalcone (MON) Goat' for cortellari 'Capra di Montefalcone'\n",
+      "Found code 'MXS': 'Incrocio Maltese e Sarda (MXS) Goat' for cortellari 'Incrocio Maltese e Sarda'\n",
       "Found code 'NIC': 'Nicastrese (NIC) Goat' for cortellari 'Nicastrese'\n",
       "Found code 'NVE': 'Nera Verzasca (NVE) Goat' for cortellari 'Nera Verzasca'\n",
       "Found code 'ORO': 'Orobica (ORO) Goat' for cortellari 'Orobica'\n",
+      "Found code 'RCC': 'Roccaverano (RCC) Goat' for cortellari 'Roccaverano'\n",
       "Found code 'RME': 'Rossa Mediterranea (RME) Goat' for cortellari 'Rossa Mediterranea'\n",
       "Found code 'SAA': 'Saanen (SAA) Goat' for cortellari 'Saanen'\n",
       "Found code 'SAR': 'Sarda (SAR) Goat' for cortellari 'Sarda'\n",
       "Found code 'DIT': 'Di Teramo (DIT) Goat' for cortellari 'Di Teramo'\n",
       "Found code 'VAL': 'Valdostana (VAL) Goat' for cortellari 'Valdostana'\n",
+      "Found code 'VLS': 'Vallesana (VLS) Goat' for cortellari 'Vallesana'\n",
       "Found code 'VSS': 'Valpassiria (VSS) Goat' for cortellari 'Valpassiria'\n"
      ]
     }
@@ -667,21 +682,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BIA Bianca Monticellana\n",
-      "CAP Capestrina\n",
-      "DDS Derivata di Siria\n",
-      "FAC Facciuta della Valnerina\n",
-      "FUL Fulva del Lazio\n",
-      "GRF Garfagnana\n",
-      "LIV Capra di Livo\n",
-      "MES Messinese\n",
-      "MNT_M Montecristo (mainland)\n",
-      "MNT_I Montecristo (island)\n",
-      "MON Capra di Montefalcone\n",
-      "MXS Incrocio Maltese e Sarda\n",
-      "RCC Roccaverano\n",
-      "SAM Maltese sampled in Sardinia\n",
-      "VLS Vallesana\n"
+      "SAM Maltese sampled in Sardinia\n"
      ]
     }
    ],
@@ -861,7 +862,7 @@
     "for fid, original_id, *_ in plinkio.read_pedfile():\n",
     "    tmp['fid'].append(fid)\n",
     "    tmp['original_id'].append(original_id)\n",
-    "    \n",
+    "\n",
     "tmp = pd.DataFrame.from_dict(tmp)\n",
     "tmp.head()"
    ]
